# phonebio

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  package.json  pyproject.toml  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  STRATEGY.md  config.json  decision_log.jsonl  receipts.jsonl  task_state.jsonl
content/: presence_signals.json  triage_sensor_matrix.json
dashboard/: edge.html  index.html  live.html  shorthand.html  triage.html
data/: knowledge.json
docs/: ADDITIONAL_SENSOR_OPTIONS.md  BANDWIDTH.md  BASIC_FIRST_AID_KIT_MODE.md  COMPLETION_AUDIT.md  DEGRADED_CONNECTIVITY_MODE.md  DEMO_SCRIPT.md  DEMO_TODO.md  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT.md  EXECUTORCH_LOCAL_ORCHESTRATOR.md  FIELD_ENVIRONMENT_MODES.md  GREGG_SEEDGRAPH_INGEST_PLAN.md  HANDS_FREE_DISASTER_MODE.md  INSFORGE_SCHEMA.md  IOT_SENSOR_PROCESSING_STRATEGY.md  IPHONE_11_FIELD_PROFILE.md  LEGACY_EQUIPMENT_DATABASE_PLAN.md  LIVE_DEMO_SCRIPT.md  NEBIUS_INTEGRATION.md  OBS_AND_AUDIO_CAPTURE.md  OLLARMA_CLAUDE_HANDOFF.md  OLLARMA_LOCAL_REVIEW.md  PREFIELD_SETUP.md  PROVIDER_STRATEGY.md  PUBLIC_ALERT_CONTEXT.md  RESEARCH.md  SENSOR_CAPABILITY_MATRIX.md  SENSOR_CONTEXT_STRATEGY.md  SENSOR_TRIAGE_MATRIX.md  SPEAKER_ONLY_VOICE_DEMO.md  STAGE_TEST_CALL_GUIDE.md  TEST_NUMBER_ACCESSIBILITY_RUN.md  VAPI_ASSISTANTS_SQUADS_TOOLS.md  VAPI_RESOURCE_STRATEGY.md  VAPI_RUNBOOK.md  deferred_writeback_candidates.jsonl  source_intake.manifest.jsonl
fieldbio/: __init__.py  app.py  auth.py  config.py  content.py  llm.py  tools.py  (+3 more)
(+68 files in other folders)
